--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/java,intellij+all,gradle
-# Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij+all,gradle
+# Created by https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,gradle,intellij+all
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -12,9 +11,6 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
-# AWS User-specific
-.idea/**/aws.xml
 
 # Generated files
 .idea/**/contentModel.xml
@@ -53,6 +49,52 @@ cmake-build-*/
 
 # File-based project format
 *.iws
+ompiled class file
+2
+*.class
+3
+​
+4
+# Log file
+5
+*.log
+6
+​
+7
+# BlueJ files
+8
+*.ctxt
+9
+​
+10
+# Mobile Tools for Java (J2ME)
+11
+.mtj.tmp/
+12
+​
+13
+# Package Files #
+14
+*.jar
+15
+*.war
+16
+*.nar
+17
+*.ear
+18
+*.zip
+19
+*.tar.gz
+20
+*.rar
+21
+​
+22
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+23
+hs_err_pid*
+24
 
 # IntelliJ
 out/
@@ -122,6 +164,8 @@ hs_err_pid*
 ### Gradle ###
 .gradle
 build/
+./Task*/.gradle
+./Task*/build
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -138,10 +182,4 @@ gradle-app.setting
 ### Gradle Patch ###
 **/build/
 
-# Eclipse Gradle plugin generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
-
-# End of https://www.toptal.com/developers/gitignore/api/java,intellij+all,gradle
+# End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all
