--- a/Snake/build.gradle
+++ b/Snake/build.gradle
@@ -34,7 +34,7 @@ javafx {
 }
 
 dependencies {
-
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
