--- a/Task_2_4_1/build.gradle
+++ b/Task_2_4_1/build.gradle
@@ -11,6 +11,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.projectlombok:lombok:1.18.22'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     compileOnly 'org.projectlombok:lombok:1.18.24'
@@ -27,8 +28,8 @@ sourceSets {
         groovy {
             srcDirs = ['src/main/groovy']
         }
-//        java {
-//            srcDirs = ['src/main/java']
-//        }
+        java {
+            srcDirs = ['src/main/java']
+        }
     }
 }
